tests/snapshots/search_navigation_test__N_after_forward_search.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
hello world [h]ello test hello
