tests/snapshots/search_navigation_test__T_till_backward.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:1
Lines: 1

Buffer:
h[e]llo world
