tests/snapshots/search_navigation_test__backward_search_wrap_around.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[s]tart middle end
