tests/snapshots/search_navigation_test__f_multiple_occurrences.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
a b [a] c a d
