tests/snapshots/search_navigation_test__forward_search_case_sensitive.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 1

Buffer:
hello [H]ello HELLO
